sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:12: error: ')' expected but 'for' found.
		for (j <- getNombreValeurs()-2 to 0 by -1 {
                ^AlgCocktailSort1:18: error: ')' expected but '}' found.
	}
        ^